--- a/app/src/main/res/drawable/round_card.xml
+++ b/app/src/main/res/drawable/round_card.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 android:shape="rectangle">
 <corners android:radius="40dp"/>
-<solid android:color="#17849F"/>
+<solid android:color="@color/light_teal"/>
 
 </shape>
