--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -74,7 +74,7 @@
             android:layout_marginStart="64dp"
             android:layout_marginBottom="16dp"
             android:text="dollar"
-            android:textColor="#17849F"
+            android:textColor="@color/light_teal"
             app:backgroundTint="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -86,7 +86,7 @@
             android:layout_marginEnd="64dp"
             android:layout_marginBottom="16dp"
             android:text="shelling"
-            android:textColor="#17849F"
+            android:textColor="@color/light_teal"
             app:backgroundTint="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -311,6 +311,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menu_icon"
-        app:tint="#17849F" />
+        app:tint="@color/light_teal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
