--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,34 +9,6 @@
     android:background="#00FFFFFF">
 
     <LinearLayout
-        android:id="@+id/layimg"
-        android:layout_width="152dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imgViewprofile"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_margin="5dp"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/iconuser"
-            app:civ_border_color="#FF000000"
-            app:civ_border_width="2dp" />
-
-        <ImageView
-            android:id="@+id/imgViewEdit"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="-20dp"
-            android:layout_marginTop="30dp"
-            android:src="@drawable/ic_edit_profile" />
-    </LinearLayout>
-
-    <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
@@ -46,50 +18,10 @@
         android:orientation="vertical"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintVertical_bias="0.5"
-        app:layout_constraintTop_toBottomOf="@+id/layimg"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="21dp">
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:text="@string/information_xog"
-            android:textColor="@color/black"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-
-        <com.google.android.material.textfield.TextInputLayout
-
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="@string/enter_name_gali_magacaga">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="@string/enter_phone_number_gali_number_kaaga">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/phone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </com.google.android.material.textfield.TextInputLayout>
 
 
         <RadioGroup
@@ -107,7 +39,7 @@
                 android:layout_marginEnd="40dp"
                 android:text="@string/english"
                 android:textColor="#000000"
-                app:buttonTint="#17849F" />
+                app:buttonTint="@color/light_teal" />
 
             <RadioButton
                 android:id="@+id/radioButton2"
@@ -116,24 +48,11 @@
                 android:layout_height="wrap_content"
                 android:text="@string/somali"
                 android:textColor="#000000"
-                app:buttonTint="#17849F" />
+                app:buttonTint="@color/light_teal" />
 
 
         </RadioGroup>
 
-        <Button
-            android:id="@+id/save"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="60dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="60dp"
-            android:background="@drawable/button_background"
-            android:text="@string/save"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:backgroundTint="#17849F" />
 
 
     </LinearLayout>
