--- a/app/src/main/res/layout/dialog_sample.xml
+++ b/app/src/main/res/layout/dialog_sample.xml
@@ -14,7 +14,7 @@
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#17849F"
+            android:background="@color/light_teal"
             android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/viewPager"
             app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:backgroundTint="#17849F"
+            app:backgroundTint="@color/light_teal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button7"
             app:layout_constraintStart_toStartOf="parent" />
@@ -54,7 +54,7 @@
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:backgroundTint="#17849F"
+            app:backgroundTint="@color/light_teal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/button6" />
