--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -68,20 +68,20 @@
             app:layout_constraintTop_toBottomOf="@+id/Name2"
             app:layout_constraintVertical_bias="0.0" />
 
-        <ImageButton
-            android:id="@+id/DeleteId"
-            android:layout_width="45dp"
-            android:layout_height="47dp"
-            android:layout_marginTop="41dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="45dp"
-            android:backgroundTint="#006A3838"
-            android:contentDescription="TODO"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_delete"
-            app:tint="#17849F" />
+<!--        <ImageButton-->
+<!--            android:id="@+id/DeleteId"-->
+<!--            android:layout_width="45dp"-->
+<!--            android:layout_height="47dp"-->
+<!--            android:layout_marginTop="41dp"-->
+<!--            android:layout_marginEnd="16dp"-->
+<!--            android:layout_marginBottom="45dp"-->
+<!--            android:backgroundTint="#006A3838"-->
+<!--            android:contentDescription="TODO"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:srcCompat="@android:drawable/ic_delete"-->
+<!--            app:tint="@color/light_teal" />-->
 
         <ImageView
             android:id="@+id/imageView"
