--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -118,7 +118,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="40dp"
                 android:text="@string/english"
-                app:buttonTint="#17849F" />
+                app:buttonTint="@color/light_teal" />
 
             <RadioButton
                 android:id="@+id/radioButton2"
@@ -126,7 +126,7 @@
                 android:layout_width="106dp"
                 android:layout_height="wrap_content"
                 android:text="@string/somali"
-                app:buttonTint="#17849F" />
+                app:buttonTint="@color/light_teal" />
 
 
         </RadioGroup>
@@ -143,7 +143,7 @@
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:backgroundTint="#17849F" />
+            app:backgroundTint="@color/light_teal" />
 
 
     </LinearLayout>
