--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,12 +22,21 @@
         tools:layout_editor_absoluteX="21dp">
 
 
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
+            android:layout_marginBottom="15dp"
+            android:gravity="center"
+            android:text="language/luuqada"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <RadioGroup
             android:id="@+id/radioGroup"
             android:layout_width="246dp"
             android:layout_height="37dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
@@ -53,7 +62,19 @@
 
         </RadioGroup>
 
-
+        <Button
+            android:id="@+id/save"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="60dp"
+            android:background="@drawable/button_background"
+            android:text="@string/save"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:backgroundTint="@color/light_teal" />
 
     </LinearLayout>
 
